syntax = "proto3";

service DataNode{
  rpc fit(Empty) returns (LocalParameters) {}
  rpc getNumFeatures(Empty) returns (NumFeatures){}
  rpc getNumSamples(Empty) returns (NumSamples){}
  rpc updateParameters(AggregatedParameters) returns (Empty){}
  rpc computeGamma(Empty) returns (Empty){}
  rpc getBeta(Empty) returns (Beta){};
  rpc prepare(InitialValues) returns (Empty){};
  rpc kill(Empty) returns (Empty){};
  rpc getFeatureNames(Empty) returns (FeatureNames){};
  rpc getAverageSigma(Empty) returns (AverageSigma){};
  rpc getRecordLevelSigma(RecordLevelSigmaRequest) returns (RecordLevelSigma){};
  rpc reset(Rows) returns (Empty) {};
}

enum Subset{
  TRAIN = 0;
  TEST = 1;
  ALL = 3;
}

message RecordLevelSigmaRequest{
  Subset subset = 1;
}

message Rows{
  repeated int32 rows = 1;
}

message InitialValues{
  repeated float gamma = 1;
  repeated float z = 2;
  repeated float beta = 3;
  float rho = 4;
}

message AggregatedParameters {
  repeated float gamma = 1;
  repeated float sigma = 2;
  repeated float z = 3;

}

message LocalParameters{
  repeated float gamma = 1;
  repeated float sigma = 2;
}

message NumFeatures{
  int32 numFeatures = 1;
}

message NumSamples{
  int32 numSamples = 1;
}

message Beta{
  repeated float beta = 1;
}

message FeatureNames{
  repeated string names = 1;
}

message AverageSigma{
  float sigma = 1;
}

message RecordLevelSigma{
  repeated float sigma = 1;
}

message PartialHazardRatio{
  repeated float partialHazardRatios = 1;
}

message Empty{}